server/api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-api
spec:
  selector:
    app: internal-api
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
